--- a/README.mkd
+++ b/README.mkd
@@ -314,3 +314,10 @@ contributors.
 
 For any questions, feedback or complaints, contact
 johannes.droege@uni-duesseldorf.de
+
+Please, if you use this software and publish a paper, cite
+
+    J. Dröge, I. Gregor, and A. C. McHardy 
+    Taxator-tk: precise taxonomic assignment of metagenomes by fast approximation of evolutionary neighborhoods
+    Bioinformatics 2015 31: 817-824.
+    doi: 10.1093/bioinformatics/btu745
